--- a/eShop.App/appsettings.json
+++ b/eShop.App/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "eShopDb": "Server=(localdb)\\mssqllocaldb;Database=eShop;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
