--- a/eShop.App/eShop.App.csproj
+++ b/eShop.App/eShop.App.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\eShop.DAL\eShop.DAL.csproj" />
+    <ProjectReference Include="..\eShop.BLL\eShop.BLL.csproj" />
   </ItemGroup>
 
 </Project>
