implement TokenService in JwtMiddleware

--- a/eShop.App/appsettings.json
+++ b/eShop.App/appsettings.json
@@ -7,7 +7,11 @@
     "Issuer": "JWTAuthenticationServer",
     "Audience": "JWTServicePostmanClient",
     "Subject": "JWTServiceAccessToken",
-    "TokenValidityInMinutes": "10"
+    "TokenValidityInMinutes": "1",
+    "RefreshTokenValidityInDays": "2"
+  },
+  "CookieLifeTime": {
+    "JwtTokenLifeTimeInDays": "30"
   },
   "Logging": {
     "LogLevel": {
